--- a/Assignment05/Base.lproj/Main.storyboard
+++ b/Assignment05/Base.lproj/Main.storyboard
@@ -541,6 +541,9 @@
                                 <rect key="frame" x="8" y="801.66666666666663" width="377" height="40.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButton:" destination="AGr-y4-umq" eventType="touchUpInside" id="gD6-ky-Mrt"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="foc-kj-dhc"/>
